# AIShow

./: .gitignore  CMakeLists.txt  README.md  model.txt
imnodes/: imnodes.cpp  imnodes.h
src/: AIModel.cpp  AIModel.h  NodeEditor.cpp  NodeEditor.h  SyncManager.cpp  SyncManager.h  ai_execution_test.cpp  main.cpp
